--- a/package.json
+++ b/package.json
@@ -12,17 +12,20 @@
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
     "@react-native-async-storage/async-storage": "^1.17.7",
+    "@react-native-firebase/app": "^15.2.0",
     "@react-native-masked-view/masked-view": "0.2.6",
     "@react-navigation/bottom-tabs": "^6.3.2",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/stack": "^6.2.2",
     "@reduxjs/toolkit": "^1.8.3",
     "axios": "^0.27.2",
+    "dotenv": "^16.0.1",
     "expo": "~45.0.0",
+    "expo-constants": "^13.1.1",
     "expo-location": "~14.2.2",
     "expo-status-bar": "~1.3.0",
     "expo-updates": "~0.13.3",
-    "firebase": "^9.9.0",
+    "firebase": "9.6.11",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
@@ -35,7 +38,8 @@
     "react-native-storage": "^1.0.1",
     "react-native-web": "0.17.7",
     "react-redux": "^8.0.2",
-    "redux-thunk": "^2.4.1"
+    "redux-thunk": "^2.4.1",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
